Fix score screen not showing properly and clean up  comments in css

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -224,48 +224,36 @@ btn:active {
 }*/
 
 #score-container {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  display: none;
+  position: fixed;
+  z-index: 1;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  width: 100%;
+  height: 100%; 
+  overflow: auto;
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.4); 
 }
 
 #score-content {
-  background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
+  background-color: #fefefe; /* 15% from the top and centered */
   padding: 20px;
   border: 3px solid black;
   border-radius: 10px;
-  width: 60%; /* Could be more or less, depending on screen size */
+  width: 60%;
   height: 30%;
   font-size: 32px;
   box-shadow: 0px 5px 15px 0px;
-  display: block;
 }
 
-#result-text span {
+.result-text a{
+  color: blue;
+  text-decoration: underline;
+}
+
+.result-text span {
   color:rgb(156, 156, 243)
-}
-
-.try-again-btn {
-  padding: 20px 40px;
-  position: fixed;
-  top: 330px;
-  border-radius: 10px;
-  border: 4px solid black;
-  cursor: pointer;
-  background-color: rgb(34, 207, 28);
-  font-size: 38px; 
-}
-
-.try-again-btn:hover {
-  border-color: yellow;
 }
 
 /* footer */
